# 2DRL

./: LICENSE  README.md
2D-Environment/: .gitignore  CMakeLists.txt  README.md
2D-Environment/src/: Action.h  Renderer.cpp  Renderer.h  main.cpp  server.cpp
2D-Environment/src/app/: main.cpp  server.cpp
2D-Environment/src/core/: Constants.h  Environment.cpp  Environment.h  EpisodeLogger.cpp  EpisodeLogger.h
2D-Environment/src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  Runner.h
2D-Environment/src/render/: Renderer.cpp  Renderer.h
DRL-Agents/: README.md  __init__.py  run.py
DRL-Agents/pacrl/: __init__.py  callbacks.py  env.py  exploration_wrapper.py  server_client.py  smoke_random.py  train.py  watch.py
DRL-Agents/partA_2d_env/: callbacks.py  cont_train.py  eval_grid.py  fault_campaign.py  fault_env.py  smoke_random.py  two_d_env.py
DRL-Agents/partB_thermal/: callbacks.py  cont_train.py  env_thermal.py  eval_thermal_latency.py
DRL-Agents/partC_bus_fuzz/: bus_fuzz_env.py  callbacks.py  cont_train.py  eval_fuzzer.py
cpp/2D-Environment/: CMakeLists.txt  README.md
cpp/2D-Environment/app/: main.cpp  server.cpp
cpp/2D-Environment/core/: Action.h  Constants.h  Environment.cpp  Environment.h  EpisodeLogger.cpp  EpisodeLogger.h
cpp/2D-Environment/entities/: Enemy.cpp  Runner.cpp
python/: requirements.txt
python/callbacks/: episode_csv_logger.py  sweeop_partA.json  tb_telemetry_callback.py
python/configs/: sweep_partB.json  sweep_partC.json
python/env/: bus_env.py  thermal_env.py  two_d_env.py
python/eval/: plot_from_csv.py
python/scripts/: aggregate_results.py  config_presets_partB.py  config_presets_partC.py  run_eval_partA.py  run_eval_partB.py  run_eval_partC.py  run_sweep_json_partA.py  run_sweep_json_partB.py  run_sweep_json_partC.py  run_train_partA.py  run_train_partB.py  run_train_partC.py  start_servers.py
python/sim/: bus_core.py
